dodano screeny do sprawozdania

--- a/latex/projekt1main.tex
+++ b/latex/projekt1main.tex
@@ -64,7 +64,7 @@
 	\section{Opis zadania}
 	
 	W celu wykonania pierwszego projektu należało przygotować aplikację która będzie potrafiła przeliczać dowolne współrzędne. Aby sprawdzić poprawność napisanego programu należało również wykonać napisać kod testujący wszystkie napisane w nim funkcje. Dodatkowo został napisany również pseudokod oraz schemat blokowy podanych w programie funkcji. \\
-	Wszystkie pliki z programami oraz plik ze współrzędnymi należało zaimportować do GitHuba: \href{https://github.com/jkluvm/projek1informatyka}{\textbf{link do strony internetowej z kodem programu}}.
+	Wszystkie pliki z programami oraz plik ze współrzędnymi należało zaimportować do GitHuba: \href{https://github.com/jkluvm/informatykaprojekt1}{\textbf{link do strony internetowej z kodem programu}}.
 	
 	\subsection{Instrukcja obsługi programu.}
 	Całość aplikacji została napisana w klasie. Na samym początku należy skorzystać z funkcji inicjującej, która pozwoli nam zdefiniować rodzaj elipsoidy i na podstawie wybranych parametrów będzie można opierać swoje dalsze obliczenia. Do wyboru można mamy elipsoidę \textbf{GRS80} oraz \textbf{WGS84}. W przypadku wybrania innej dowolnej elipsoidy program zwróci informację, że dana elipsoida nie została zaimportowana do funkcji i należy skorzystać z którejś z powyższych. Po wyznaczeniu dużej i małej półosi, algorytm oblicza również spłaszczenie Ziemi oraz kwadrat mimośrodu.\\
@@ -151,5 +151,16 @@
 	8. \textbf{katy odl} \\
 	wykonaj algorytm na wyznaczenie kąta azymutu, kąta elewacji oraz odległości 2D i 3D \\
 	\rule{\textwidth}{.5pt} \\
+	\newpage
+	
+	\section{Historia commitów w pierwszym repozytorium.}
+	Czas wykonania screenów: 14.04.2022r., godz. 00:10
+	\begin{center}
+		\newcommand{\commit}{settings/commits2.png}
+		\includegraphics[width=.8\paperwidth]{\commit}
+		\\
+		\newcommand{\committ}{settings/commits1.png}
+		\includegraphics[width=.8\paperwidth]{\committ}
+	\end{center}
 	
 \end{document}
